2019-07-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24699]
	* posix/tst-mmap-offset.c: Mention BZ #24699.
	(do_test_bz21270): Rename to do_test_large_offset and use
	mmap64_maximum_offset to check for maximum expected offset value.
	* sysdeps/generic/mmap_info.h: New file.
	* sysdeps/unix/sysv/linux/mips/mmap_info.h: Likewise.
	* sysdeps/unix/sysv/linux/mmap64.c (MMAP_OFF_HIGH_MASK): Define iff
	__NR_mmap2 is used.

2019-07-12  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/dl-machine.h (elf_machine_lazy_rel): Check
	STO_AARCH64_VARIANT_PCS and bind such symbols at load time.

2019-06-13  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* elf/elf.h (STO_AARCH64_VARIANT_PCS): Define.
	(DT_AARCH64_VARIANT_PCS): Define.

2019-06-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #24744]
	io: Remove the copy_file_range emulation.
	* sysdeps/unix/sysv/linux/copy_file_range.c (copy_file_range): Do
	not define and call copy_file_range_compat.
	* io/Makefile (tests-static, tests-internal): Do not add
	tst-copy_file_range-compat.
	* io/copy_file_range-compat.c: Remove file.
	* io/copy_file_range.c (copy_file_range): Define as stub.
	* io/tst-copy_file_range-compat.c: Remove file.
	* io/tst-copy_file_range.c (xdevfile): Remove variable.
	(typical_sizes): Update comment.  Remove 16K sizes.
	(maximum_offset, maximum_offset_errno, maximum_offset_hard_limit):
	Remove variables.
	(find_maximum_offset, pipe_as_source, pipe_as_destination)
	(delayed_write_failure_beginning, delayed_write_failure_end)
	(cross_device_failure, enospc_failure_1, enospc_failure)
	(oappend_failure): Remove functions.
	(tests): Adjust test case list.
	(do_test): Remove file system search code.  Check for ENOSYS from
	copy_file_range.  Do not free xdevfile.
	* manual/llio.texi (Copying File Data): Document ENOSYS error from
	copy_file_range.  Do not document the EXDEV error, which future
	kernels may not report.  Update the wording to reflect that
	further errors are possible.